--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Games</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <h1>Dark Games</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Sobre a loja</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    </header>
+    <section>
+        <div class="container">
+            <img src="./images/loja.jpg" alt="Fachada da loja">
+        </div>
+        <div>
+            <h2>Sobre a loja</h2>
+        <p>
+            Lorem ipsum dolor, 
+            sit amet consectetur adipisicing elit. 
+            Saepe earum nihil quod maxime magni quidem numquam aperiam, 
+            unde aliquid sint at provident ab cumque, 
+            iusto consequatur architecto beatae illum porro.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, 
+            adipisicing elit. 
+            Atque doloribus illo iure inventore reprehenderit, 
+            pariatur asperiores corrupti molestias in dignissimos 
+            quidem repellendus dolore necessitatibus, 
+            dolorem cupiditate suscipit aspernatur libero laudantium?
+        </p>
+        <ul class="brand-list">
+            <li><img src="./images/nintendo.png" alt="Nintendo"></li>
+            <li><img src="./images/playstation.png" alt="Playstation"></li>
+            <li><img src="./images/xbox.png" alt="Xbox"></li>
+        </ul>
+        </div>
+    </section>
 </body>
 </html>
