--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Games</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
@@ -22,9 +27,9 @@
         </nav>
     </div>
     </header>
-    <section>
+    <section id="about">
         <div class="container">
-            <img src="./images/loja.jpg" alt="Fachada da loja">
+            <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja">
         </div>
         <div>
             <h2>Sobre a loja</h2>
