--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <section id="about">
         <div class="container">
             <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja">
-        </div>
-        <div>
+            <div>
             <h2>Sobre a loja</h2>
         <p>
             Lorem ipsum dolor, 
@@ -53,6 +52,48 @@
             <li><img src="./images/playstation.png" alt="Playstation"></li>
             <li><img src="./images/xbox.png" alt="Xbox"></li>
         </ul>
+        </div>
+        </div>
+        
+    </section>
+    <section id="contact">
+        <div class="container">
+            <h2>Contato</h2>
+            <div>
+                <div>
+                    <h1>Fale conosco</h1>
+                    <form>
+                        <input type="text" placeholder="Seu nome">
+                        <input type="email" placeholder="Seu e-mail">
+                        <input type="tel" placeholder="Seu telefone">
+                        <textarea placeholder="Sua mensagem"></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+                <div>
+                    <h1>Nós acompanhe</h1>
+                    <ul>
+                        <li>
+                            <a href="#" title="siga no insta">
+                                <img src="images/instagram.png" alt="Insta">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="siga no face">
+                                <img src="images/facebook.png" alt="Face">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="increva-se no youtube">
+                                <img src="images/youtube.png" alt="Youtube">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h1>Venha até nós</h1>
+                </div>
+            </div>
         </div>
     </section>
 </body>
