--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     dolorem impedit, architecto fugiat illo eos unde perferendis 
                     iure adipisci odio. Totam, deleniti quasi.
                 </p>
+                
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Assumenda quis ad dolore iste sequi esse ipsa illo expedita, 
@@ -59,10 +60,10 @@
                 <div>
                     <h3>Fale conosco</h3>
                     <form>
-                        <input type="text" placeholder="Seu nome">
-                        <input type="email" placeholder="Seu e-mail">
+                        <input type="text" placeholder="Seu nome" required>
+                        <input type="email" placeholder="Seu e-mail" required>
                         <input type="tel" placeholder="Seu telefone (opcional)">
-                        <textarea placeholder="Sua mensagem"></textarea>
+                        <textarea placeholder="Sua mensagem" required></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
@@ -92,8 +93,16 @@
                         Rua Castelo Branco, 115, Gothan City, Amapá, República de Bananas.
                     </p>
                 </div>
+                
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <P>
+                &copy; Dark Games - Todos os direitos reservados - 2024
+            </P>
+        </div>
+    </footer>
 </body>
 </html>
